--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css'>
-<link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css'>
-<link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
-<link rel='stylesheet' href='/assets/css/style.css'>
-</head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+     <!-- Bootstrap Core CSS -->
+    <link rel='stylesheet' href='css/bootstrap.min.css'>
+    <link rel='stylesheet' href='css/bootstrap.css'>
+     <!-- Custom Fonts -->
+    <link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom CSS -->
+    <link rel='stylesheet' href='/css/style.css'>
+
+    <title>1000 Pitches at Georgia Tech</title>
+</head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role = "navigation">
+         <div class="container-fluid">
+             <div class="navbar-header">
+                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                     <span class="sr-only">Toggle navigation</span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                 </button>
+                  <a class="navbar-brand" href="#">LOGO</a>
+                  <!-- <img alt="Brand" src="..."> Replace image -->
+             </div>
+         </div>
+    </nav>
 </body>
