first draft mockup

--- a/index.html
+++ b/index.html
@@ -1,41 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Theresa Ming">
 
-     <!-- Bootstrap Core CSS -->
-    <link rel='stylesheet' href='css/bootstrap.min.css'>
-    <link rel='stylesheet' href='css/bootstrap.css'>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/style.css" rel="stylesheet">
+
      <!-- Custom Fonts -->
-    <link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css'>
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
-    <!-- Custom CSS -->
-    <link rel='stylesheet' href='/css/style.css'>
 
     <title>1000 Pitches at Georgia Tech</title>
 </head>
+
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role = "navigation">
-         <div class="container-fluid">
-             <div class="navbar-header">
-                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                     <span class="sr-only">Toggle navigation</span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                 </button>
-                  <a class="navbar-brand" href="#">LOGO</a>
-                  <!-- <img alt="Brand" src="..."> Replace image -->
-             </div>
-         </div>
-    </nav>
+    <!-- Header -->
+    <div class="intro-header">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                        <div class="intro-message">
+                                <span class="bg">
+                                    <img src="img/logo-1.png">
+                                </span>
+
+                                <h2>
+                                    GEORGIA TECH
+                                </h2>
+                        </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.intro-header -->
+
+    <!-- Page Content -->
+
+    <!-- Info -->
+    <div class="event-info">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="info-message">
+                        <span class="graph">
+                            <img src="img/1kpgtech.png">
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Sponsors -->
+    <div class="sponsors">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="sponsor-message">
+                        <h3>SPONSORED BY</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <span class="footer-text">
+                        <p>
+                            Made with <i class="fa fa-heart fa-lg"></i> by Startup Exchange.
+                        </p>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
 </body>
+</html>
