--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
+                    <!-- <div class="nav-bar">
+                        <p>WHAT IS 1000 PITCHES?</p>
+                    </div> -->
                         <div class="intro-message">
-                                <span class="bg">
-                                    <img src="img/logo-1.png">
-                                </span>
-
-                                <h2>
-                                    GEORGIA TECH
-                                </h2>
+                            <img src="img/logo-1.png" class="pitches-logo">
+                            <br>
+                            <br>
+                            <img src="img/sx-logo.png" class="sx-logo">
                         </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                 <div class="col-lg-12">
                     <div class="info-message">
                         <span class="graph">
-                            <img src="img/1kpgtech.png">
+                            <img src="img/1kpgtech.jpg">
                         </span>
                     </div>
                 </div>
@@ -69,9 +69,26 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="sponsor-message">
-                        <h3>SPONSORED BY</h3>
-                    </div>
+                    <h3>SPONSORED BY</h3>
+                </div>
+            </div>
+            <div class="row" style="text-align:center">
+                <div class="col-md-4">
+                    <img src="img/rha.png">
+                </div>
+                <div class="col-md-4">
+                    <img src="img/buzzcard.png">
+                </div>
+                <div class="col-md-4">
+                    <img style="margin-top:10%; max-width:100%" src="img/scheller.png">
+                </div>
+            </div>
+            <div class="row" style="text-align:center">
+                <div class="col-md-6">
+                    <img src="img/atv.jpeg" style="max-width:30%; margin-top:10%">
+                </div>
+                <div class="col-md-6">
+                    <img src="img/atdc.png" style="margin-top:10%">
                 </div>
             </div>
         </div>
