--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
-     <!-- Custom Fonts -->
+    <!-- Custom Fonts -->
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -30,16 +30,21 @@
     <div class="intro-header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12" style="text-align:left;margin-top:-2%;margin-right:5%;white-space:nowrap">
+                    <span class = "top">
+                        <a href="http://startup.exchange" target="_blank"><img src="img/sx-logo.png" class="sx-header" style="position: absolute;"><p style="color:#ffffff;margin-left:50px;margin-top:1%;text-decoration:none">
+                        Startup Exchange
+                    </p></span></a>
                     <!-- <div class="nav-bar">
                         <p>WHAT IS 1000 PITCHES?</p>
                     </div> -->
-                        <div class="intro-message">
-                            <img src="img/logo-1.png" class="pitches-logo">
-                            <br>
-                            <br>
-                            <img src="img/sx-logo.png" class="sx-logo">
-                        </div>
+                    <div class="intro-message">
+                        <img src="img/logo-1.png" class="pitches-logo">
+                        <br>
+                        <br>
+                        <img src="img/sx-logo.png" class="sx-logo"> <br><br>
+                        <a href="http://eepurl.com/cx09C5" target="_blank" class="btn btn-warning btn-lg" role="button">Subscribe to our mailing list!</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,32 +69,25 @@
         </div>
     </div>
 
+
     <!-- Sponsors -->
     <div class="sponsors">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h3>SPONSORED BY</h3>
+                    <h3>OUR SPONSORS</h3>
                 </div>
             </div>
-            <div class="row" style="text-align:center">
-                <div class="col-md-4">
+            <div class="row" style="text-align:center;margin-top:5%">
+                <div class="col-md-12">
                     <img src="img/rha.png">
-                </div>
-                <div class="col-md-4">
                     <img src="img/buzzcard.png">
-                </div>
-                <div class="col-md-4">
-                    <img style="margin-top:10%; max-width:100%" src="img/scheller.png">
+                    <img src="img/atv.jpeg">
+                    <img src="img/atdc.png">
                 </div>
             </div>
-            <div class="row" style="text-align:center">
-                <div class="col-md-6">
-                    <img src="img/atv.jpeg" style="max-width:30%; margin-top:10%">
-                </div>
-                <div class="col-md-6">
-                    <img src="img/atdc.png" style="margin-top:10%">
-                </div>
+            <div class="row" style="text-align:center;margin-top:5%">
+                    <img src="img/scheller.png" style="max-width:20%;text-align:center">
             </div>
         </div>
     </div>
@@ -102,6 +100,8 @@
                     <span class="footer-text">
                         <p>
                             Made with <i class="fa fa-heart fa-lg"></i> by Startup Exchange.
+                            <br>
+                            Notify <a href="mailto:theresaming@gmail.com">Theresa</a> with any issues.
                         </p>
                     </span>
                 </div>
@@ -116,4 +116,5 @@
     <script src="js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
