--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
     <!-- Custom Fonts -->
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <title>1000 Pitches at Georgia Tech</title>
 </head>
@@ -29,21 +27,52 @@
     <!-- Header -->
     <div class="intro-header">
         <div class="container-fluid">
+            <div class = "row">
+                <div class = "col-md-3">
+                    <div class = "top">
+                        <!-- <p><img src="img/sx-logo.png" class="sx-header" align="left"> Startup Exchange.</p> -->
+                        <a href="http://startup.exchange" target="_blank">
+                            <p style="color:#ffffff;text-decoration:none">
+                                <img src="img/sx-logo.png" class="sx-header" align="left;center;" style="margin-right:1%"> Startup Exchange
+                            </p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class = "row">
+                <div class="nav">
+                    <ul class = "list-inline">
+                        <li>
+                        <a href="index.html" target="">
+                            <h2>ABOUT&nbsp;&nbsp;</h2></a>
+                        </li>
+                        <li>
+                        <a href="http://eepurl.com/cx09C5" target="_blank">
+                            <h2>SUBSCRIBE&nbsp;&nbsp;</h2></a>
+                        </li>
+                        <li>
+                            <a href="categories.html">
+                                <h2>CATEGORIES&nbsp;&nbsp;</h2></a>
+                        </li>
+                        <li>
+                            <a href="faq.html">
+                                <h2>FAQ&nbsp;&nbsp;</h2></a>
+                        </li>
+                        <li>
+                            <a href="http://eepurl.com/cx09C5">
+                                <h2>GO PITCH&nbsp;&nbsp;</h2></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-12" style="text-align:left;margin-top:-2%;margin-right:5%;white-space:nowrap">
-                    <span class = "top">
-                        <a href="http://startup.exchange" target="_blank"><img src="img/sx-logo.png" class="sx-header" style="position: absolute;"><p style="color:#ffffff;margin-left:50px;margin-top:1%;text-decoration:none">
-                        Startup Exchange
-                    </p></span></a>
-                    <!-- <div class="nav-bar">
-                        <p>WHAT IS 1000 PITCHES?</p>
-                    </div> -->
+
                     <div class="intro-message">
                         <img src="img/logo-1.png" class="pitches-logo">
                         <br>
                         <br>
-                        <img src="img/sx-logo.png" class="sx-logo"> <br><br>
-                        <a href="http://eepurl.com/cx09C5" target="_blank" class="btn btn-warning btn-lg" role="button">Subscribe to our mailing list!</a>
+                        <img src="img/sx-b.png" class="sx-logo"> <br><br>
                     </div>
                 </div>
             </div>
@@ -61,7 +90,7 @@
                 <div class="col-lg-12">
                     <div class="info-message">
                         <span class="graph">
-                            <img src="img/1kpgtech.jpg">
+                            <img src="img/1kpgtech.png" style="zoom:80%">
                         </span>
                     </div>
                 </div>
@@ -84,10 +113,13 @@
                     <img src="img/buzzcard.png">
                     <img src="img/atv.jpeg">
                     <img src="img/atdc.png">
+                    <img src="img/scheller.png">
+                    <img src="img/sandbox-atl.png" />
+                    <img src="img/create-x.png" />
+                    <img src ="img/venture-lab.jpg" />
+                    <img src="img/techsq-labs.png" />
+                    <img src="img/invest-atl.png" />
                 </div>
-            </div>
-            <div class="row" style="text-align:center;margin-top:5%">
-                    <img src="img/scheller.png" style="max-width:20%;text-align:center">
             </div>
         </div>
     </div>
