--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
                             <a href="faq.html">
                                 <h2>FAQ&nbsp;&nbsp;</h2></a>
                         </li>
-                        <li>
-                            <a href="http://eepurl.com/cx09C5">
-                                <h2>GO PITCH&nbsp;&nbsp;</h2></a>
-                        </li>
                     </ul>
                 </div>
+            </div>
+            <div class = "row" style="margin-top:2em">
+                <a href = "https://startupexchange.typeform.com/to/oelPFw" class = "btn btn-primary btn-lg" role = "button">
+                    GO PITCH!
+                </a>
             </div>
             <div class="row">
                 <div class="col-md-12" style="text-align:left;margin-top:-2%;margin-right:5%;white-space:nowrap">
