--- a/faq.html
+++ b/faq.html
@@ -58,7 +58,7 @@
                                 <h2>FAQ&nbsp;&nbsp;</h2></a>
                         </li>
                         <li>
-                            <a href="http://eepurl.com/cx09C5">
+                            <a href="https://startupexchange.typeform.com/to/oelPFw">
                                 <h2>GO PITCH&nbsp;&nbsp;</h2></a>
                         </li>
                     </ul>
